--- a/campaign/templates/app/campaign/campaign-leads.html
+++ b/campaign/templates/app/campaign/campaign-leads.html
@@ -94,7 +94,7 @@
                 <i class="fas fa-envelope-open-text fa-3x"></i>
             </div>
             <h3 class="text-lg font-medium">No lead-lists assigned yet</h3>
-            <button class="btn btn-primary mt-4" onclick="document.getElementById('add-modal').showModal()">
+            <button id="assign-leads-btn-driver" class="btn btn-primary mt-4" onclick="document.getElementById('add-modal').showModal()">
                 Assign Lead List
             </button>
         </div>
@@ -197,6 +197,46 @@ function unAssignListFromCampaign(listId) {
         ModalSystem.toast('An error occurred.', 'error');
     });
 }
+
+
+
+
+
+{% if not request.user.onboarding_completed %}
+// onboarding
+document.addEventListener("DOMContentLoaded", () => {
+  const step = localStorage.getItem("onboardingStep");
+
+  // Only start this step if profile is completed but new campaign not clicked
+  if (step === "created_a_campaign") {
+    const driver = window.driver.js.driver;
+    const driverObj = driver({
+      animate: true,
+      overlayOpacity: 0.5,
+      stagePadding: 10,
+      allowClose: false,
+      allowKeyboardControl: false,
+      steps: [
+        {
+          element: "#assign-leads-btn-driver",
+          popover: {
+            title: "Let's Assign Leads!",
+            description: "Click here to assign leads to your campaign.",
+            position: "bottom"
+          }
+        }
+      ]
+    });
+
+    driverObj.drive();
+
+    document.querySelector("#new-campaign-btn-driver").addEventListener("click", () => {
+      driverObj.destroy();  // hides the overlay
+      // Now redirect to campaigns
+    });
+  }
+});
+{% endif %}
 
 
 </script>
