--- a/campaign/templates/components/nav.html
+++ b/campaign/templates/components/nav.html
@@ -30,7 +30,7 @@
         </li> -->
 
         <!-- Leads -->
-        <li>
+        <li id="leads-tab">
           <div class="tooltip tooltip-right" data-tip="Leads">
             <a href="{% url 'leads_lists' %}" class="sidebar-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
               <i class="fa-solid fa-users text-l"></i>
@@ -39,7 +39,7 @@
         </li>
 
         <!-- Messages -->
-        <li>
+        <li id="msgs-tab">
           <div class="tooltip tooltip-right" data-tip="Messages">
             <a href="{% url 'messages' %}" class="sidebar-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
               <i class="fa-solid fa-envelope text-l"></i>
@@ -48,7 +48,7 @@
         </li>
 
         <!-- Campaigns -->
-        <li class="mt-2 mb-2">
+        <li id="campaigns-tab" class="mt-2 mb-2">
           <div class="tooltip tooltip-right" data-tip="Campaigns">
             <a href="{% url 'campaign_view_list' %}" 
               class="sidebar-link flex h-12 w-12 items-center justify-center rounded-full bg-base-200 text-gray-500 shadow-lg transition-all duration-200 ring-2 ring-gray-200 hover:scale-105"> 
@@ -58,7 +58,7 @@
         </li>
 
         <!-- Links -->
-        <li>
+        <li id="links-tab">
           <div class="tooltip tooltip-right" data-tip="Links">
             <a href="{% url 'links' %}" class="sidebar-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
               <i class="fa-solid fa-link text-l"></i>
@@ -67,7 +67,7 @@
         </li>
 
         <!-- Overall Dashboard -->
-        <li>
+        <li id="overall-dashboard-tab">
           <div class="tooltip tooltip-right" data-tip="Overall Dashboard">
             <a href="{% url 'overall_dashboard' %}" class="sidebar-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
               <i class="fa-solid fa-chart-line text-l"></i>
@@ -81,14 +81,14 @@
   <!-- Bottom Section -->
   <div class="flex flex-col items-center gap-y-3">
     <!-- Feedback -->
-    <div class="tooltip tooltip-right" data-tip="Submit Feedback">
+    <div id="feedback-tab" class="tooltip tooltip-right" data-tip="Submit Feedback">
       <a href="{% url 'feedback' %}" class="sidebar-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
         <i class="fa-solid fa-comment-dots text-l"></i>
       </a>
     </div>
 
     <!-- User Account -->
-    <div class="tooltip tooltip-right" data-tip="Account Settings">
+    <div id="account-settings-tab" class="tooltip tooltip-right" data-tip="Account Settings">
       <a id="account-settings-link" href="{% url 'account_settings' %}" class="sidebar-link avatar placeholder active">
         <div class="w-8 rounded-full bg-neutral text-neutral-content hover:bg-primary transition-all duration-200 cursor-pointer">
           <span class="text-sm">{% if not request.user.first_name %}U{% else %}{{ request.user.first_name|slice:":1" }}{% endif %}</span>
